file(GLOB_RECURSE DEBUGGER_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE DEBUGGER_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_executable(Debugger ${DEBUGGER_HEADER_FILES} ${DEBUGGER_SOURCE_FILES})
target_link_libraries(Debugger PUBLIC qjs)